Fixed alignments and added schedule
Fixed alignments and added calendly links

--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
-/* CSS file for My Portfolio website */
+/* CSS file for Kim's Salon website */
 body {
     background-color: aliceblue;
     color: black;
     font-family: 'Alegreya Sans',Arial, sans-serif;
     position: relative;
+    margin-left: 0;
   }
   
   html {
     --top-spacing: 150px;
     scroll-padding-top: var(--top-spacing);
-    height: 100vh;
-    width: 100vw;
+
+    margin-left: 0;
   }
   
-
-
   h1 {
     margin: 0;
+  }
+
+  h2 {
+    color: black;
+  }
+
+  h4 {
+    display: inline;
   }
   
 .navbar {
@@ -58,18 +65,7 @@ body {
   main {
     margin: 20px;
   }
-  
-  h2 {
-    color: black;
-  }
 
-  h4 {
-    display: inline;
-  }
-
-  .stars{
-    color: rgb(221, 221, 39);
-  }
 
   ul {
     list-style: none;
@@ -87,22 +83,16 @@ body {
 
   #appointments {
     padding: 0px 20px;
-  }
-
-  #services {
-    padding: 0px 20px;
-  }
-
-  #about {
-    padding: 0px 20px;
+    margin: auto;
     display: flex;
     flex-direction: column;
+    width: 80%;
   }
 
   .apt-table{
-    width:100%;
-    
+    width:80%;
   }
+
   .apt-table th {
     padding: 10px;
     text-align: left;
@@ -139,24 +129,25 @@ body {
     font-weight: bold;
   }
 
-  th a {
-    display: block;
-    width:100%;
+  #services {
+    padding: 0px 20px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
   }
 
-  .price-table{
-    width: 100%;
+  .services-table{
+    width: 60%;
     border-collapse: collapse;
   }
 
-  .price-table th {
-    padding: 10px;
-    text-align: left;
-  }
-
-  .price-table td {
-    padding: 10px;
-    text-align: center;
+  #about {
+    padding: 0px 20px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
   }
 
   .about-style {
@@ -171,29 +162,62 @@ body {
     height: auto;
     padding: 10px 0px;
   } 
-  
 
   #gallery {
     padding: 0px 20px;
+    margin: auto;
     display: flex;
     flex-direction: column;
+    width: 80%;
   }
 
   #gallery-flex {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
+    justify-content: space-around;
+    margin: auto;
     gap: 3rem;
     padding: 10px;
+    width: 80%;
   }
+
 
   #reviews {
     padding: 0px 20px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+  }
+
+  #review-style{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
+    width: 80%;
+    margin: auto;
+  } 
+
+  .stars{
+    color: rgb(221, 221, 39);
+  }
+
+  th a {
+    display: block;
+    width:100%;
+  }
+
+
+
+  .price-table th {
+    padding: 10px;
+    text-align: left;
+  }
+
+  .price-table td {
+    padding: 10px;
+    text-align: center;
+  }
 
   #biz-info {
     display: flex;
@@ -219,6 +243,7 @@ body {
 
   .responsive {
     padding: 0 20px;
+    width: 100%;
   }
 
   #hours {
@@ -238,6 +263,10 @@ body {
     padding: 10px;
     display: flex;
     justify-content: center;
+  }
+
+  .desc {
+    width: 100%;
   }
 
   #text3d{
@@ -264,8 +293,6 @@ body {
     width: 100%;
   }
 
-
-
   .phone-number-red {
     color: red;
     text-decoration: none;
@@ -286,7 +313,7 @@ body {
   .phone-box {
     width: 270px;
     height: 50px;
-    margin: 0px 50px auto auto;
+    margin: auto;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
@@ -311,7 +338,7 @@ body {
     color: red;
     width: 400px;
     height: 40px;
-    margin: 50px 0px;
+    margin: 20px;
     background-color: white; /* white */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
@@ -330,22 +357,80 @@ body {
     border-radius: 5px;
   }
 
-  .color-yellow {
-    color: rgb(204, 204, 10);
-  }
-
   .padding-updown {
     padding: 10px;
   }
 
+  @media screen and (max-width: 320px){
+    html, body{
+      margin: auto;
+    }
+
+    #reviews{
+      padding: 0;
+    }
+  }
+
+  @media screen and (max-width: 375px){
+    html, body{
+      margin: auto;
+    }
+
+    #reviews{
+      padding: 0;
+    }
+
+    #gallery {
+      margin: auto;
+    }
+
+  }
+
+  @media screen and (max-width: 448px){
+    html, body{
+      margin: auto;
+    }
+
+    #reviews{
+      padding: 0;
+    }
+
+    #gallery {
+      margin: auto;
+    }
+  }
 
   @media screen and (max-width: 641px) {
 
+    table {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .apt-table{
+      width: 320px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .apt-table col {
+      width:220px;
+    }
     #biz-info {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+    }
+    .phone-box {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+  }
+
+  @media screen and (max-width: 768px) {
+    .services-table{
+      width:60%;
     }
   }
 
@@ -363,9 +448,30 @@ body {
      }
   }
 
-  @media screen and (max-width: 1367px) {
-    #gallery{
+  @media screen and (max-width: 1440px) {
+    #apt-services {
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+     }
+     #services {
       display: flex;
-      flex-wrap: wrap;
-    }
+      flex-direction: column;
+      align-items: center;
+     }
+  }
+
+  @media screen and (max-width: 2560px) {
+    #apt-services {
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+     }
+     #services {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+     }
   }
